--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ProgettoCloudComputing
+spring.cloud.azure.active-directory.enabled=true
+spring.cloud.azure.active-directory.profile.tenant-id=c30767db-3dda-4dd4-8a4d-097d22cb99d3
+spring.cloud.azure.active-directory.credential.client-id=b306a196-e715-4476-bb74-f753562f5107
+spring.cloud.azure.active-directory.credential.client-secret=${app_secret}
