aggiunto login oauth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.application.name=ProgettoCloudComputing
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.security.user.name=admin
-spring.security.user.password=password
+spring.security.oauth2.client.registration.azure.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
+spring.security.oauth2.client.registration.azure.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
+spring.security.oauth2.client.registration.azure.scope=openid,profile,email
+spring.security.oauth2.client.provider.azure.issuer-uri=https://login.microsoftonline.com/c30767db-3dda-4dd4-8a4d-097d22cb99d3/v2.0
