--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.application.name=ProgettoCloudComputing
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.security.oauth2.client.registration.azure.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
-spring.security.oauth2.client.registration.azure.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
-spring.security.oauth2.client.registration.azure.scope=openid,profile,email
-spring.security.oauth2.client.provider.azure.issuer-uri=https://login.microsoftonline.com/c30767db-3dda-4dd4-8a4d-097d22cb99d3/v2.0
+# Enable related features.
+spring.cloud.azure.active-directory.enabled=true
+# Specifies your Active Directory ID:
+#spring.cloud.azure.active-directory.profile.tenant-id=c30767db-3dda-4dd4-8a4d-097d22cb99d3
+# Specifies your App Registration's Application ID:
+spring.cloud.azure.active-directory.credential.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
+# Specifies your App Registration's secret key:
+spring.cloud.azure.active-directory.credential.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
