--- a/.github/workflows/main_streamingmusicale.yml
+++ b/.github/workflows/main_streamingmusicale.yml
@@ -15,6 +15,9 @@ jobs:
     permissions:
       contents: read #This is required for actions/checkout
 
+    env:
+      KEY_COSMOSDB: ${{secrets.KEY_COSMOSDB }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -42,6 +45,9 @@ jobs:
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
+
+    env:
+      KEY_COSMOSDB: ${{ secrets.KEY_COSMOSDB }}
 
     steps:
       - name: Download artifact from build job
