prova check logged user in login.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=ProgettoCloudComputing
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#spring.cloud.azure.active-directory.enabled=true
-#spring.cloud.azure.active-directory.credential.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
-#spring.cloud.azure.active-directory.credential.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
+spring.cloud.azure.active-directory.enabled=true
+spring.cloud.azure.active-directory.credential.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
+spring.cloud.azure.active-directory.credential.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
 
 spring.cloud.azure.cosmos.endpoint=https://dbprogetto.documents.azure.com:443/
 spring.cloud.azure.cosmos.database=dbprogetto
