--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.cloud.azure.active-directory.credential.client-secret=${MICROSOFT_PROVIDE
 spring.cloud.azure.cosmos.endpoint=https://dbprogetto.documents.azure.com:443/
 spring.cloud.azure.cosmos.database=dbprogetto
 spring.cloud.azure.cosmos.key=${KEY_COSMOSDB}
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_PROVIDER_AUTHENTICATION_SECRET}
