--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,17 @@ spring.cloud.azure.active-directory.enabled=true
 spring.cloud.azure.active-directory.credential.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
 spring.cloud.azure.active-directory.credential.client-secret=${MICROSOFT_PROVIDER_AUTHENTICATION_SECRET}
 
+spring.security.oauth2.client.registration.azure.scope=openid,profile,email
+spring.security.oauth2.client.registration.azure.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.azure.redirect-uri={baseUrl}/login/oauth2/code
+spring.security.oauth2.client.registration.azure.client-name=Azure
+spring.security.oauth2.client.registration.azure.client-id=fd07842c-dfdc-40c6-a759-11f29da7456d
+
+# Configurazione del provider Azure AD
+spring.security.oauth2.client.provider.azure.authorization-uri=https://login.microsoftonline.com/common/oauth2/v2.0/authorize
+spring.security.oauth2.client.provider.azure.token-uri=https://login.microsoftonline.com/common/oauth2/v2.0/token
+spring.security.oauth2.client.provider.azure.user-info-uri=https://graph.microsoft.com/oidc/userinfo
+
 spring.cloud.azure.cosmos.endpoint=https://dbprogetto.documents.azure.com:443/
 spring.cloud.azure.cosmos.database=dbprogetto
 spring.cloud.azure.cosmos.key=${KEY_COSMOSDB}
