corretto commit recert, versione funzionante, funzione di ricerca da correggere

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.cloud.azure.cosmos.key=${KEY_COSMOSDB}
 
 spring.cloud.azure.storage.blob.account-name=storageaccountprogetto
 spring.cloud.azure.storage.blob.account-key=${STORAGE_ACCOUNT_KEY}
+spring.cloud.azure.storage.blob.connection-string=${STORAGE_CONNECTION_STRING}
